Refactor email fetch and update CSV data
Simplify Clientes ativos.py: consolidate credentials and query variables, change mailbox.fetch to filter by sender and subject, and remove the previous extraction/saving logic (now just prints email subjects). Rename and update solicitação CSVs (saved under Solicitações/) for Bahia and Pernambuco with additional rows appended. Clean up clientes_all.csv by removing duplicate/overlapping entries. Also add lista completa.csv and update py.py and teste.ipynb.

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -15,15 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "80ffa749",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Emails encontrados: 450\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mO Kernel deu pane ao executar o código na célula atual ou em uma célula anterior. \n",
+      "\u001b[1;31mAnalise o código nas células para identificar uma possível causa da pane. \n",
+      "\u001b[1;31mClique <a href='https://aka.ms/vscodeJupyterKernelCrash'>aqui</a> para obter mais informações. \n",
+      "\u001b[1;31mConsulte Jupyter <a href='command:jupyter.viewOutput'>log</a> para obter mais detalhes."
      ]
     }
    ],
@@ -37,7 +41,16 @@
     "_from = 'noreplyportalgd@neoenergia.com'\n",
     "\n",
     "query = \"Portal da Geração Distribuída: Solicitação \"\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5ecde59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "mailbox = MailBox('imap.gmail.com').login(username, password)\n",
     "lista_emails = mailbox.fetch(AND(from_=_from))\n",
@@ -50,7 +63,15 @@
    "execution_count": null,
    "id": "455e932a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista gerada e salva em clientes_all.csv\n"
+     ]
+    }
+   ],
    "source": [
     "Clientes = []\n",
     "for email in lista_emails_com_query:\n",
@@ -77,54 +98,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b4d4395",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for email in lista_emails:\n",
-    "#     print(email.subject)\n",
-    "#     print(email.date)\n",
-    "\n",
-    "# Modificação para extrair número da solicitação e nome do cliente\n",
-    "dados_clientes = []\n",
-    "\n",
-    "for email in lista_emails_com_query:\n",
-    "    # Extrair número da solicitação do assunto (assumindo formato \"Solicitação XXXX\")\n",
-    "    match_num = re.search(r'Solicitação (\\d+)', email.subject)\n",
-    "    numero_solicitacao = match_num.group(1) if match_num else \"Não encontrado\"\n",
-    "    \n",
-    "    # Extrair nome do cliente do corpo do email (assumindo que está em uma linha como \"Cliente: Nome\")\n",
-    "    # Você pode ajustar o regex conforme o formato exato do email\n",
-    "    match_nome = re.search(r'Prezado\\(a\\)\\s+(.+?),', email.html, re.IGNORECASE)\n",
-    "    nome_cliente = match_nome.group(1).strip() if match_nome else \"Não encontrado\"  \n",
-    "    if numero_solicitacao not in dados_clientes['numero_solicitacao']:\n",
-    "        dados_clientes.append({\n",
-    "            'numero_solicitacao': numero_solicitacao,\n",
-    "            'nome_cliente': nome_cliente,\n",
-    "            'data': email.date\n",
-    "        })\n",
-    "    # print(f\"Extraído - Solicitação: {numero_solicitacao}, Cliente: {nome_cliente}\")\n",
-    "    print(email.text)\n",
-    "\n",
-    "# Criar DataFrame e salvar em CSV\n",
-    "df = pd.DataFrame(dados_clientes)\n",
-    "df.to_csv('clientes_ativos.csv', index=False)\n",
-    "print(\"Lista gerada e salva em clientes_ativos.csv\")\n",
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0ca84707",
    "metadata": {},
    "outputs": [],
    "source": [
     "BASE_DIR = os.getcwd()\n",
-    "CSV_FILES = [\n",
-    "    os.path.join(BASE_DIR, 'Solcitações/PortalGD_minhas_solicitacoes.csv'),\n",
-    "    os.path.join(BASE_DIR, 'Solcitações/PortalGD_minhas_solicitacoes (1).csv'),\n",
-    "]\n",
+    "# CSV_FILES = [\n",
+    "#     os.path.join(BASE_DIR, 'Solcitações/PortalGD_minhas_solicitacoes.csv'),\n",
+    "#     os.path.join(BASE_DIR, 'Solcitações/PortalGD_minhas_solicitacoes (1).csv'),\n",
+    "#]\n",
+    "\n",
+    "CSV_FILES = [os.path.join(BASE_DIR, file) for file in os.listdir(BASE_DIR) if file.endswith('.csv')]\n",
+    "\n",
     "def load_active_codes():\n",
     "    codes = set()\n",
     "    for path in CSV_FILES:\n",
@@ -141,29 +126,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7d6ba17f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cont = 0\n",
-    "for csv_file in CSV_FILES:\n",
-    "    df_temp = pd.read_csv(csv_file, encoding='latin1')\n",
-    "    if cont == 0:\n",
-    "        df = df_temp\n",
-    "        cont += 1\n",
-    "    else:\n",
-    "        df = pd.concat([df, df_temp], ignore_index=True)\n",
+    "BASE_DIR = os.getcwd()\n",
+    "\n",
+    "def get_all_clients(Directory):\n",
+    "    cont = 0\n",
+    "    CSV_FILES = [os.path.join(Directory, file) for file in os.listdir(Directory) if file.endswith('.csv')]\n",
+    "    for csv_file in CSV_FILES:\n",
+    "        df_temp = pd.read_csv(csv_file, encoding='latin1')\n",
+    "        if cont == 0:\n",
+    "            df = df_temp\n",
+    "            cont += 1\n",
+    "        else:\n",
+    "            df = pd.concat([df, df_temp], ignore_index=True)\n",
+    "    return df\n",
     "# print(df.shape())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ed392c19",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Protocolo da Solicitação  Código da Unidade Consumidora  \\\n",
+      "0                2601199327                      204364443   \n",
+      "1                2512232215                     7096579211   \n",
+      "2                2512055922                     7087990170   \n",
+      "3                2510242711                     7086746810   \n",
+      "4                2510087236                     7095208031   \n",
+      "\n",
+      "                                   Status Atual Data de Ingresso  \n",
+      "0  Aguardando solicitação de vistoria e Conexão       19/01/2026  \n",
+      "1  Aguardando solicitação de vistoria e Conexão       29/12/2025  \n",
+      "2                         Solicitação Concluída       05/12/2025  \n",
+      "3                         Solicitação Concluída       24/10/2025  \n",
+      "4                         Solicitação Concluída       08/10/2025  \n",
+      "   numero_solicitacao                                 nome_cliente  \\\n",
+      "0          2409116427                       NIVALDO ALVES FERREIRA   \n",
+      "1          2408061389                       FAUSTINO LUIZ DE SOUZA   \n",
+      "2          2408183061                       ELIENE DE SOUZA DANTAS   \n",
+      "3          2407087540             JOSE ANTONIO NOBREGA DE CARVALHO   \n",
+      "4          2410293367  RENILSON DA PAIX&Atilde;O FERREIRA PEIXINHO   \n",
+      "\n",
+      "                        data  \n",
+      "0  2024-10-08 11:03:44-03:00  \n",
+      "1  2024-10-14 17:18:23-03:00  \n",
+      "2  2024-10-16 10:42:03-03:00  \n",
+      "3  2024-10-18 09:57:00-03:00  \n",
+      "4  2024-10-29 11:52:39-03:00  \n"
+     ]
+    }
+   ],
+   "source": [
+    "solicitacoes = get_all_clients(os.path.join(BASE_DIR, 'Solicitações'))\n",
+    "all_clients  = pd.read_csv('clientes_all.csv')\n",
+    "\n",
+    "# Merge para adicionar a coluna nome\n",
+    "# solicitacoes = solicitacoes.merge(\n",
+    "#     all_clients[['Protocolo da Solicitação', 'nome_cliente']], \n",
+    "#     on='numero_solicitacao', \n",
+    "#     how='left'\n",
+    "# )\n",
+    "\n",
+    "# # Renomear coluna se necessário\n",
+    "# solicitacoes = solicitacoes.rename(columns={'nome_cliente': 'nome'})\n",
+    "\n",
+    "print(solicitacoes.head())\n",
+    "print(all_clients.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fdf3f459",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Protocolo da Solicitação  Código da Unidade Consumidora  \\\n",
+      "0                2601199327                      204364443   \n",
+      "1                2512232215                     7096579211   \n",
+      "2                2512055922                     7087990170   \n",
+      "3                2510087236                     7095208031   \n",
+      "4                2510066351                     7096699640   \n",
+      "\n",
+      "                                   Status Atual Data de Ingresso  \\\n",
+      "0  Aguardando solicitação de vistoria e Conexão       19/01/2026   \n",
+      "1  Aguardando solicitação de vistoria e Conexão       29/12/2025   \n",
+      "2                         Solicitação Concluída       05/12/2025   \n",
+      "3                         Solicitação Concluída       08/10/2025   \n",
+      "4                         Solicitação Concluída       23/12/2025   \n",
+      "\n",
+      "   numero_solicitacao                 nome_cliente                       data  \n",
+      "0          2601199327  SUELY ROMAO DANTAS DA SILVA  2026-01-19 17:27:38-03:00  \n",
+      "1          2512232215    Eudarc Goncalves de Sousa  2025-12-29 14:36:41-03:00  \n",
+      "2          2512055922       Laiane Santos da Silva  2025-12-16 08:43:21-03:00  \n",
+      "3          2510087236  Breno Rainan Braga da Silva  2025-10-08 15:55:26-03:00  \n",
+      "4          2510066351   ROBERIA PATROCINO DA SILVA  2025-12-23 11:47:13-03:00  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df_final = pd.merge(\n",
+    "    solicitacoes, \n",
+    "    all_clients, \n",
+    "    left_on='Protocolo da Solicitação', \n",
+    "    right_on='numero_solicitacao', \n",
+    "    how='inner'\n",
+    ")\n",
+    "\n",
+    "print(df_final.head())\n",
+    "df_final.to_csv('lista completa.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55cb6340",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mailbox = MailBox('imap.gmail.com').login(username, password)\n",
+    "lista_emails = mailbox.fetch(AND(from_=_from))"
+   ]
   }
  ],
  "metadata": {
