--- a/teste.ipynb
+++ b/teste.ipynb
@@ -10,27 +10,16 @@
     "from imap_tools import MailBox, AND\n",
     "import os\n",
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "80ffa749",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mO Kernel deu pane ao executar o código na célula atual ou em uma célula anterior. \n",
-      "\u001b[1;31mAnalise o código nas células para identificar uma possível causa da pane. \n",
-      "\u001b[1;31mClique <a href='https://aka.ms/vscodeJupyterKernelCrash'>aqui</a> para obter mais informações. \n",
-      "\u001b[1;31mConsulte Jupyter <a href='command:jupyter.viewOutput'>log</a> para obter mais detalhes."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# username = \"adm.happyenergy@gmail.com\"\n",
     "# password = \"mxtl agjv dcsn tcnv\" #adm.happyenergy@gmail.com\n",
@@ -63,15 +52,7 @@
    "execution_count": null,
    "id": "455e932a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lista gerada e salva em clientes_all.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Clientes = []\n",
     "for email in lista_emails_com_query:\n",
@@ -126,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7d6ba17f",
    "metadata": {},
    "outputs": [],
@@ -149,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "ed392c19",
    "metadata": {},
    "outputs": [
@@ -206,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "fdf3f459",
    "metadata": {},
    "outputs": [
@@ -252,13 +233,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "55cb6340",
+   "execution_count": 6,
+   "id": "b2e721ce",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "def sanitize_filename(name: str) -> str:\n",
+    "    name = str(name).strip()\n",
+    "    name = re.sub(r'[\\\\/*?:\"<>|]', '_', name)\n",
+    "    name = name.replace('\\n', ' ').replace('\\r', '')\n",
+    "    return name\n",
+    "\n",
+    "\n",
+    "def extract_period(subject: str) -> str:\n",
+    "    if not subject:\n",
+    "        return None\n",
+    "    # busca YYYY-MM ou YYYY/MM primeiro, depois MM/YYYY, depois YYYY\n",
+    "    parts = subject.split(\"- \")\n",
+    "    return parts[1].split(\"Demonstrativo do Faturamento\")[1]\n",
+    "\n",
+    "\n",
+    "def extract_cliente(subject: str) -> str:\n",
+    "    if not subject:\n",
+    "        return 'cliente_desconhecido'\n",
+    "    return subject.split(\"- \")[2].removesuffix(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "55cb6340",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "abort",
+     "evalue": "command: UID => socket error: EOF",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mabort\u001b[39m                                     Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\imaplib.py:1047\u001b[39m, in \u001b[36mIMAP4._command_complete\u001b[39m\u001b[34m(self, name, tag)\u001b[39m\n\u001b[32m   1046\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1047\u001b[39m     typ, data = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_tagged_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtag\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexpect_bye\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlogout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1048\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;28mself\u001b[39m.abort \u001b[38;5;28;01mas\u001b[39;00m val:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\imaplib.py:1173\u001b[39m, in \u001b[36mIMAP4._get_tagged_response\u001b[39m\u001b[34m(self, tag, expect_bye)\u001b[39m\n\u001b[32m   1172\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1173\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1174\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;28mself\u001b[39m.abort \u001b[38;5;28;01mas\u001b[39;00m val:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\imaplib.py:1075\u001b[39m, in \u001b[36mIMAP4._get_response\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1068\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_get_response\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1069\u001b[39m \n\u001b[32m   1070\u001b[39m     \u001b[38;5;66;03m# Read response and store.\u001b[39;00m\n\u001b[32m   1071\u001b[39m     \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[32m   1072\u001b[39m     \u001b[38;5;66;03m# Returns None for continuation responses,\u001b[39;00m\n\u001b[32m   1073\u001b[39m     \u001b[38;5;66;03m# otherwise first response line received.\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1075\u001b[39m     resp = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_line\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1077\u001b[39m     \u001b[38;5;66;03m# Command completion response?\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\imaplib.py:1185\u001b[39m, in \u001b[36mIMAP4._get_line\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1184\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m line:\n\u001b[32m-> \u001b[39m\u001b[32m1185\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m.abort(\u001b[33m'\u001b[39m\u001b[33msocket error: EOF\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m   1187\u001b[39m \u001b[38;5;66;03m# Protocol mandates all lines terminated by CRLF\u001b[39;00m\n",
+      "\u001b[31mabort\u001b[39m: socket error: EOF",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mabort\u001b[39m                                     Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m _from = \u001b[33m\"\u001b[39m\u001b[33mr2d2.frms@neoenergia.com\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m lista_emails = mailbox.fetch(AND(from_=_from))\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(lista_emails), \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mcontagem de itens: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mlista_emails\u001b[49m\u001b[43m)\u001b[49m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\imap_tools\\mailbox.py:199\u001b[39m, in \u001b[36mBaseMailBox.fetch\u001b[39m\u001b[34m(self, criteria, charset, limit, mark_seen, reverse, headers_only, bulk, sort)\u001b[39m\n\u001b[32m    197\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    198\u001b[39m     message_generator = \u001b[38;5;28mself\u001b[39m._fetch_by_one(uids, message_parts)\n\u001b[32m--> \u001b[39m\u001b[32m199\u001b[39m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mfetch_item\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmessage_generator\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m    200\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01myield\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43memail_message_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfetch_item\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\imap_tools\\mailbox.py:144\u001b[39m, in \u001b[36mBaseMailBox._fetch_by_one\u001b[39m\u001b[34m(self, uid_list, message_parts)\u001b[39m\n\u001b[32m    142\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_fetch_by_one\u001b[39m(\u001b[38;5;28mself\u001b[39m, uid_list: Sequence[\u001b[38;5;28mstr\u001b[39m], message_parts: \u001b[38;5;28mstr\u001b[39m) -> Iterator[\u001b[38;5;28mlist\u001b[39m]:\n\u001b[32m    143\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m uid \u001b[38;5;129;01min\u001b[39;00m uid_list:\n\u001b[32m--> \u001b[39m\u001b[32m144\u001b[39m         fetch_result = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43muid\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mfetch\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmessage_parts\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    145\u001b[39m         check_command_status(fetch_result, MailboxFetchError)\n\u001b[32m    146\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m fetch_result[\u001b[32m1\u001b[39m] \u001b[38;5;129;01mor\u001b[39;00m fetch_result[\u001b[32m1\u001b[39m][\u001b[32m0\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\imaplib.py:890\u001b[39m, in \u001b[36mIMAP4.uid\u001b[39m\u001b[34m(self, command, *args)\u001b[39m\n\u001b[32m    885\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m.error(\u001b[33m\"\u001b[39m\u001b[33mcommand \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m illegal in state \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    886\u001b[39m                      \u001b[33m\"\u001b[39m\u001b[33monly allowed in states \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m\"\u001b[39m %\n\u001b[32m    887\u001b[39m                      (command, \u001b[38;5;28mself\u001b[39m.state,\n\u001b[32m    888\u001b[39m                       \u001b[33m'\u001b[39m\u001b[33m, \u001b[39m\u001b[33m'\u001b[39m.join(Commands[command])))\n\u001b[32m    889\u001b[39m name = \u001b[33m'\u001b[39m\u001b[33mUID\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m890\u001b[39m typ, dat = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_simple_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    891\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m command \u001b[38;5;129;01min\u001b[39;00m (\u001b[33m'\u001b[39m\u001b[33mSEARCH\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mSORT\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mTHREAD\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m    892\u001b[39m     name = command\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\imaplib.py:1230\u001b[39m, in \u001b[36mIMAP4._simple_command\u001b[39m\u001b[34m(self, name, *args)\u001b[39m\n\u001b[32m   1228\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_simple_command\u001b[39m(\u001b[38;5;28mself\u001b[39m, name, *args):\n\u001b[32m-> \u001b[39m\u001b[32m1230\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_command_complete\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\imaplib.py:1049\u001b[39m, in \u001b[36mIMAP4._command_complete\u001b[39m\u001b[34m(self, name, tag)\u001b[39m\n\u001b[32m   1047\u001b[39m     typ, data = \u001b[38;5;28mself\u001b[39m._get_tagged_response(tag, expect_bye=logout)\n\u001b[32m   1048\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;28mself\u001b[39m.abort \u001b[38;5;28;01mas\u001b[39;00m val:\n\u001b[32m-> \u001b[39m\u001b[32m1049\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m.abort(\u001b[33m'\u001b[39m\u001b[33mcommand: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m => \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m % (name, val))\n\u001b[32m   1050\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;28mself\u001b[39m.error \u001b[38;5;28;01mas\u001b[39;00m val:\n\u001b[32m   1051\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m.error(\u001b[33m'\u001b[39m\u001b[33mcommand: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m => \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m % (name, val))\n",
+      "\u001b[31mabort\u001b[39m: command: UID => socket error: EOF"
+     ]
+    }
+   ],
+   "source": [
     "mailbox = MailBox('imap.gmail.com').login(username, password)\n",
-    "lista_emails = mailbox.fetch(AND(from_=_from))"
+    "_from = \"r2d2.frms@neoenergia.com\"\n",
+    "lista_emails = mailbox.fetch(AND(from_=_from))\n",
+    "print(type(lista_emails), f\"contagem de itens: {len(list(lista_emails))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6421323a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for email in lista_emails:\n",
+    "    if not email.attachments:\n",
+    "        continue\n",
+    "    nome = sanitize_filename(extract_cliente(email.subject))\n",
+    "    periodo = sanitize_filename(extract_period(email.subject))\n",
+    "    filename = f\"{nome}_{periodo}.pdf\"\n",
+    "    \n",
+    "    \n",
+    "    hoje = datetime.now()\n",
+    "    data_cliente_row = df_final[df_final['nome_cliente'] == nome]\n",
+    "    if data_cliente_row.empty:\n",
+    "        continue\n",
+    "    data_cliente = pd.to_datetime(data_cliente_row['Data de Ingresso'].iloc[0], format='%d/%m/%Y')\n",
+    "    DAY_IN_YEAR_PLUS_MARGIN = 365 + 35\n",
+    "    if (hoje - data_cliente).days < DAY_IN_YEAR_PLUS_MARGIN:\n",
+    "        base_folder = os.path.join(BASE_DIR, 'clientes ativos')\n",
+    "    else:\n",
+    "        base_folder = os.path.join(BASE_DIR, 'clientes não ativos')\n",
+    "\n",
+    "    dest_dir = os.path.join(base_folder, nome)\n",
+    "    os.makedirs(dest_dir, exist_ok=True)\n",
+    "    for anexo in email.attachments:\n",
+    "        if 'RelatorioResumo' in anexo.filename:\n",
+    "            filename = f\"{nome} - {periodo}.pdf\"\n",
+    "            path = os.path.join(dest_dir, filename)\n",
+    "            with open(path, 'wb') as f:\n",
+    "                f.write(anexo.payload)"
    ]
   }
  ],
